--- a/outage-tracker-server/outage-tracker/app/views/outage/index.html.erb
+++ b/outage-tracker-server/outage-tracker/app/views/outage/index.html.erb
@@ -2,8 +2,13 @@
 
 <table>
   <tr>
-    <th>Title</th>
-    <th>Text</th>
+    <th>Id</th>
+    <th>Description</th>
+    <th>Location</th>
+    <th>Start Date</th>
+    <th>End Date</th>
+    <th>Address</th>
+    <th>Aff Customers</th>
   </tr>
 
   <% @outage.each do |outage| %>
