--- a/outage-tracker-server/outage-tracker/app/views/welcome/index.html.erb
+++ b/outage-tracker-server/outage-tracker/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Hello, Rails!</h1>
-<%= link_to "Outages", controller: "outage" %>
-<%= link_to 'New Outage', new_outage_path %>
+<%= link_to "Outages", controller: "outages" %>
+<%= link_to 'New Outages', new_outage_path %>
 
 
