--- a/outage-tracker-client/outagetracker/MainStoryboard.storyboard
+++ b/outage-tracker-client/outagetracker/MainStoryboard.storyboard
@@ -439,7 +439,7 @@
             </objects>
             <point key="canvasLocation" x="-317" y="510"/>
         </scene>
-        <!--Ot About View Controller - Hakkinda-->
+        <!--Ot About View Controller - Hakkında-->
         <scene sceneID="VMC-IV-Hm5">
             <objects>
                 <tableViewController storyboardIdentifier="OtAboutViewCtrl" id="Ct4-MN-LlV" customClass="OtAboutViewController" sceneMemberID="viewController">
@@ -533,7 +533,7 @@
                             <outlet property="delegate" destination="Ct4-MN-LlV" id="HIh-tK-kFe"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Hakkinda" id="QDW-rV-R9p">
+                    <navigationItem key="navigationItem" title="Hakkında" id="QDW-rV-R9p">
                         <barButtonItem key="leftBarButtonItem" image="ot-menu-icon.png" id="P5Z-SL-MsL">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <connections>
@@ -984,8 +984,8 @@
                                                         <constraint firstAttribute="width" constant="24" id="yVy-dz-rON"/>
                                                     </constraints>
                                                 </imageView>
-                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Hakkinda" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0j-1j-zJX">
-                                                    <rect key="frame" x="52" y="11" width="248" height="21"/>
+                                                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Hakkında" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J0j-1j-zJX">
+                                                    <rect key="frame" x="52" y="11" width="248" height="22"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="21" id="SBg-v4-x3z"/>
                                                     </constraints>
@@ -1106,9 +1106,6 @@
         <image name="ot-about-icon.png" width="24" height="24"/>
         <image name="ot-bill-example.png" width="590" height="550"/>
         <image name="ot-feedback-icon.png" width="24" height="24"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-outage-icon.png" width="24" height="24"/>
         <image name="ot-settings-icon.png" width="24" height="24"/>
