--- a/outage-tracker-client/outagetracker/MainStoryboard.storyboard
+++ b/outage-tracker-client/outagetracker/MainStoryboard.storyboard
@@ -368,7 +368,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="changeHouseImage:" destination="d5f-AA-8Wk" eventType="touchUpInside" id="8cH-NZ-v1B"/>
+                                    <action selector="claimDisturbance:" destination="d5f-AA-8Wk" eventType="touchUpInside" id="xmR-Ji-SQi"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -1042,9 +1042,6 @@
         <image name="ot-about-icon.png" width="24" height="24"/>
         <image name="ot-bill-example.png" width="590" height="550"/>
         <image name="ot-feedback-icon.png" width="24" height="24"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-outage-icon.png" width="24" height="24"/>
         <image name="ot-settings-icon.png" width="24" height="24"/>
