--- a/outage-tracker-client/outagetracker/MainStoryboard.storyboard
+++ b/outage-tracker-client/outagetracker/MainStoryboard.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="F7v-ii-QGw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="F7v-ii-QGw">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -1042,9 +1042,6 @@
         <image name="ot-about-icon.png" width="24" height="24"/>
         <image name="ot-bill-example.png" width="590" height="550"/>
         <image name="ot-feedback-icon.png" width="24" height="24"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
-        <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-menu-icon.png" width="22" height="17"/>
         <image name="ot-outage-icon.png" width="24" height="24"/>
         <image name="ot-settings-icon.png" width="24" height="24"/>
